--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link rel="stylesheet" href="f.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ce7d7d4d7b.js" crossorigin="anonymous"></script>
 </head>
 <body>
